# web-scrapper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  notes.txt  pyproject.toml  requirements.txt  web_scrapping.py
src/: __init__.py  singleton.py  web_scrapper.py
